Closed
Bug 17968
Opened 26 years ago
Closed 25 years ago
Selection does not invert on an 8-bit display useably
Categories
(Core :: DOM: Selection, defect, P3)
Tracking
()
VERIFIED
FIXED
M15
People
(Reporter: tor, Assigned: pavlov)
References
Details
(Keywords: helpwanted)
Attachments
(1 file)
27.43 KB,
image/gif
|
Details |
When apprunner is run on an 8-bit pseudocolor display, the selection
does not reverse video as expected. Drag selections or double/triple
clicked selections do not appear any different than normal text. Makes
various editing operation impossible.
Tested on 11/3 evening CVS pull compiled solaris/native .
Assignee | ||
Updated•26 years ago
|
Whiteboard: HELP WANTED
Target Milestone: M15
Updated•25 years ago
|
Keywords: helpwanted
Whiteboard: HELP WANTED
Comment 1•25 years ago
|
||
Is this related to bug 10699?
BTW: I see this under Linux 8-bit displays too (02200022).
Assignee | ||
Updated•25 years ago
|
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 2•25 years ago
|
||
I hope i just fixed this. tor, could you verify?
Comment 4•25 years ago
|
||
tor, could you possibly verify this on a current build? QA doesn't have any Sun
boxes.
A linux box running in 8-bit mode will exhibit the same problem/solution.
Nevertheless, I'll try to test on an 8-bit solaris box sometime today.
See the attached image - while the selection area is now visible, the actual
text being selected is unreadable (at least for black on white text).
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Summary: Selection does not invert on an 8-bit display → Selection does not invert on an 8-bit display useably
Comment 8•25 years ago
|
||
Thanks!
Assignee | ||
Comment 10•25 years ago
|
||
selection isn't XORing anymore. marking this bug fixed. filing a new bug that
XORd painting doesn't work very well on 8bit displays -- bug 34039.
Status: REOPENED → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Comment 11•25 years ago
|
||
I'm unable to reproduce this problem on the April 3rd Linux build configured for
8-bit depth. Thus, verifying as fixed.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•