fix for lack of selection drawing on 8bit displays bug 17968